@@ -51,6 +51,8 @@ Release 0.4.0 - Unreleased
   HCAT-2 Support nested schema conversion between Hive an Pig (julienledem via hashutosh)
 
   IMPROVEMENTS
+  HCAT-266 Upgrade HBase dependency to 0.92 (thw via toffer)
+
   HCAT-243 HCat e2e tests need to change to not use StorageDrivers (gaets)
 
   HCAT-256 HCatalog should provide its classpath to tools (gates)
